rakuten/restrict-robin-reserved-ports/.chainsaw-test/bad-resource.yaml
apiVersion: v1
kind: Service
metadata:
  name: invalid-robin-service
  labels:
    app.kubernetes.io/name: robin123
spec:
  selector:
    app: robin
  ports:
    - port: 29445
      targetPort: 29445
---
apiVersion: v1
kind: Pod
metadata:
  name: invalid-robin-pod
  labels:
    app.kubernetes.io/name: robin1
spec:
  containers:
    - name: robin-container
      image: nginx
      ports:
        - containerPort: 29450
